<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NewOnTV</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_default">default</string>
    <string name="forceRefresh">Force Refresh</string>
    <string name="title_activity_edit_shows_list">Add/Remove Shows</string>
    <string name="addShowByName">Add Show by Title</string>
    <string name="viewShowsList">My Shows</string>
    <string name="enter_show_title">Enter show title</string>
    <string name="search">Search</string>
    <string name="title_activity_choose_series">Choose Series</string>
    <string name="add">Add</string>
    <string name="refresh">Refresh</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleteShow">Delete Show</string>
    <string name="title_activity_delete_show">Delete Show</string>
    <string name="editList">Edit List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_export">Export List&#8230;</string>
    <string name="settings_import">Import List&#8230;</string>
    <string name="settings_runningShowsOnly">No Cancelled Shows</string>
    <string name="settings_runningShowsOnly_summaryOn">Only show currently running shows</string>
    <string name="settings_runningShowsOnly_summaryOff">All shows will be shown in search</string>
    <string name="pref_category_manage_list">Manage List</string>
    <string name="pref_category_general">General</string>
    <string name="settings_export_short">Export to SD</string>
    <string name="settings_import_short">Import from SD</string>
    <string name="settings_clear_list">Delete All Shows&#8230;</string>
    <string name="defaultDate">01-01-2000</string>
    <string name="today">Today</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_series_display">SeriesDisplay</string>
    <string name="title_activity_episode_display">EpisodeDisplay</string>

</resources>