<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

    <PreferenceCategory android:title="@string/pref_category_general" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="only_show_running"
            android:persistent="true"
            android:summaryOff="@string/settings_runningShowsOnly_summaryOff"
            android:summaryOn="@string/settings_runningShowsOnly_summaryOn"
            android:title="@string/settings_runningShowsOnly" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_manage_list" >
        <Preference
            android:key="import"
            android:title="@string/settings_import_short" />
        <Preference
            android:key="export"
            android:title="@string/settings_export_short" />
        <Preference
            android:key="clear_list"
            android:title="@string/settings_clear_list" />
    </PreferenceCategory>

</PreferenceScreen>