<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".EditShowsList" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addShowByName" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/addShowSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" 
            android:layout_alignParentRight="true"
            android:onClick="onAddShowSearchClick"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_show_title"
            android:imeOptions="actionDone"
            android:inputType="text" 
            android:layout_toLeftOf="@id/addShowSearch"
            android:singleLine="true"
            android:id="@+id/addShowString" 
            />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/showsListLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/viewShowsList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewShowsList" />
    </LinearLayout>

</LinearLayout>